test/negative/112_empty_pattern.fx
// expect: pattern
val x = match 1 { | => 0 }
println(x)
